# d2b-clip-picker

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  flake.nix
.github/workflows/: ci.yml  pr.yml
docs/explanation/: fork-acknowledgement.md
docs/reference/: protocol.md
src/: lib.rs  main.rs  placement.rs  protocol.rs  ui.rs
tests/: binary.rs  policy.rs  protocol.rs  test_serde.rs
