[package]
name = "d2b-clip-picker"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "UI-only d2b clipboard picker protocol client"

[lib]
name = "d2b_clip_picker"
path = "src/lib.rs"

[[bin]]
name = "d2b-clip-picker"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
glib = "0.21.5"
gtk4 = { version = "0.10", features = ["v4_6"] }
gtk4-layer-shell = "0.6.3"
libadwaita = "0.8"
libc = "0.2"
log = "0.4"
rustix = { version = "1.0", features = ["event"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.11", features = ["client"] }
